[gd_scene load_steps=2 format=3 uid="uid://bomber_run_gameover"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_script"]

[node name="GameOverScreen" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="Panel" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 12

[node name="GameOverLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
text = "GAME OVER"

[node name="ScoreLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
text = "SCORE: 0000000"

[node name="HighScoreLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
text = "HIGH: 0000000"

[node name="PromptLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.6, 1)
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
text = "PRESS ENTER TO RESTART"
